# NeuralNetworks

./: cnn.ipynb  imagerecog.py  pyproject.toml
